style: fix justified text word spacing in mobile view

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -120,5 +120,9 @@
     z-index: 12 !important;
     position: relative !important;
   }
+
+  .about-me p {
+    text-align: left !important;
+  }
 }
 
